# tensor-math-library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tml.sln
bench/: CMakeLists.txt  run.cpp
example/: CMakeLists.txt  main.cpp
include/tml/: tml.hpp
include/tml/core/: expression.hpp  fwd.hpp  initialization.hpp  operators.hpp  tensor.hpp
include/tml/internal/: functors.hpp  tensor_traits.hpp  utility.hpp
scripts/: clang-format.py
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
tml/: Main.cpp  tml.common.settings  tml.vcxproj  tml.vcxproj.filters
tml/include/: Matrix.hpp  Shape.hpp  tml.hpp
tml/include/matrix/: Matrix.hpp  Shape.hpp
tml/include/ops/: Assert.hpp
tml/include/ops/eager/: EagerArgmax.hpp  EagerArgmin.hpp  EagerBinaryOPs.hpp  EagerExecution.h  EagerExecution.hpp  EagerMatrixMultiplication.hpp  EagerMax.hpp  EagerMean.hpp  EagerMin.hpp  EagerSum.hpp  EagerTranspose.hpp  EagerUnaryOPs.hpp  ExecutionPolicy.hpp
tml/include/ops/eager/base/: ArgmaxBase.hpp  ArgminBase.hpp  Base.hpp  BinaryOPBase.hpp  MatmulBase.hpp  MaxBase.hpp  MeanBase.hpp  MinBase.hpp  SumBase.hpp  TransposeBase.hpp  UnaryOPBase.hpp
tml/include/ops/eager/binary/: Add.hpp  CustomBinaryOP.hpp  Div.hpp  Equal.hpp  GraterEqualThan.hpp  GreaterThan.hpp  LessEqualThan.hpp  LessThan.hpp  Maximum.hpp  Minimum.hpp  Mul.hpp  NotEqual.hpp  Pow.hpp  Reshape.hpp  Sub.hpp
tml/include/ops/eager/parallel/: ParallelArgmax.hpp  ParallelArgmin.hpp  ParallelBinaryOP.hpp  ParallelMatrixMultiplication.hpp  ParallelMax.hpp  ParallelMean.hpp  ParallelMin.hpp  ParallelSum.hpp  ParallelTranspose.hpp  ParallelUnaryOP.hpp
tml/include/ops/eager/reduction/: EagerArgmax.hpp  EagerArgmin.hpp  EagerMax.hpp  EagerMean.hpp  EagerMin.hpp  EagerSum.hpp
tml/include/ops/eager/serial/: SerialArgmax.hpp  SerialArgmin.hpp  SerialBinaryOP.hpp  SerialMatrixMultiplication.hpp  SerialMax.hpp  SerialMean.hpp  SerialMin.hpp  SerialSum.hpp  SerialTranspose.hpp  SerialUnaryOP.hpp
tml/include/ops/lazy/: Abs.hpp  Add.hpp  BinaryOP.hpp  Cos.hpp  Cosh.hpp  Cot.hpp  CustomLazyOP.hpp  Div.hpp  Exp.hpp  Expr.hpp  LazyEvaluation.hpp  LazyMatrixMultiplication.hpp  LazyOPs.hpp  LazyTranspose.hpp  Log.hpp  MatmulExpr.hpp  Mul.hpp  Neg.hpp  ReductionExpr.hpp  ReshapeOP.hpp  ScalarExpr.hpp  Sin.hpp  Sinh.hpp  Sqrt.hpp  Square.hpp  Sub.hpp  Tan.hpp  Tanh.hpp  TransposeExpr.hpp  UnaryOP.hpp
tml/include/ops/lazy/binary/: Add.hpp  Div.hpp  Equal.hpp  GreaterEqualThan.hpp  GreaterThan.hpp  LessEqualThan.hpp  LessThan.hpp  Maximum.hpp  Minimum.hpp  Mul.hpp  NotEqual.hpp  Pow.hpp  Reshape.hpp  Sub.hpp
tml/include/ops/lazy/reduction/: Argmax.hpp  Argmin.hpp  Max.hpp  Mean.hpp  Min.hpp  Sum.hpp
tml/include/ops/lazy/unary/: Abs.hpp  Cos.hpp  Cosh.hpp  Cot.hpp  Exp.hpp  Log.hpp  Neg.hpp  Sin.hpp  Sinh.hpp  Sqrt.hpp  Square.hpp  Tan.hpp  Tanh.hpp
(+35 files in other folders)
